--- a/foody/src/components/PostCard.css
+++ b/foody/src/components/PostCard.css
@@ -7,6 +7,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Slightly larger shadow for depth */
     max-width: 500px; /* Maximum width of the card */
     width: 100%; /* Make it responsive */
+    padding-bottom: 70px;
   }
   
   .post-header {
@@ -83,7 +84,19 @@
     display: flex;
     align-items: center;
   }
+
+  .restaurant-name a {
+    text-decoration: none; /* Removes underline */
+    color: #E74C3C; /* Specific color for restaurant names */
+    /* Add any other styles specific to restaurant name links */
+  }
   
+  .post-link {
+    text-decoration: none; /* Removes underline */
+    color: inherit; /* Inherits the text color from the parent */
+    /* Add any other styles you want for post links */
+  }
+
   
   /* Add media query for responsiveness */
   @media (max-width: 768px) {
